xorg-server (2:1.13.0-0ubuntu6.1) UNRELEASED; urgency=low

  [ Maarten Lankhorst ]
  * add 233-xf86events-valgrind.patch to fix a xserver corruption
    when acpid is stopped before Xorg is. (LP: #1070481)
  * add 235-composite-tracking.diff to fix exa corruption. (LP: #1010794)

 -- Timo Aaltonen <tjaalton@ubuntu.com>  Tue, 09 Oct 2012 10:22:24 +0300

xorg-server (2:1.13.0-0ubuntu6) quantal; urgency=low

  [ Timo Aaltonen ]
  * patches/series: Reorganize our patches in categories in order to
    make reviewing and rebasing easier.

  [ Maarten Lankhorst ]
  * add 232-xf86compatoutput-valgrind.patch to silence a valgrind error

 -- Timo Aaltonen <tjaalton@ubuntu.com>  Mon, 08 Oct 2012 17:58:54 +0300

xorg-server (2:1.13.0-0ubuntu5) quantal; urgency=low

  * Update 228_autobind_gpu.patch to not crash when the device has no
    randr provider. (LP: #1054051)

 -- Timo Aaltonen <tjaalton@ubuntu.com>  Tue, 25 Sep 2012 09:46:44 +0300

xorg-server (2:1.13.0-0ubuntu4) quantal; urgency=low

  * Add patches to fix issues with hybrid graphics:
    - 230-fix-compat-output-selection.patch
      Fix compat output selection when the GPU has no outputs
      (LP: #1043458)
    - 231-scan-pci-after-probing-devices.patch
      Fix a race condition when dynamically powering off secondary GPU's

 -- Timo Aaltonen <tjaalton@ubuntu.com>  Thu, 20 Sep 2012 14:34:45 +0300

xorg-server (2:1.13.0-0ubuntu3) quantal; urgency=low

  * Try again with the right hotplug patch.

 -- Timo Aaltonen <tjaalton@ubuntu.com>  Mon, 17 Sep 2012 16:24:29 +0300

xorg-server (2:1.13.0-0ubuntu2) quantal; urgency=low

  [ Maarten Lankhorst ]
  * Add patch to autobind gpu's

  [ Timo Aaltonen ]
  * Add a patch to fix drm device hotplugging.

 -- Timo Aaltonen <tjaalton@ubuntu.com>  Mon, 17 Sep 2012 15:58:32 +0300

xorg-server (2:1.13.0-0ubuntu1) quantal; urgency=low

  * Merge from unreleased debian git.

 -- Timo Aaltonen <tjaalton@ubuntu.com>  Thu, 06 Sep 2012 12:25:51 +0300
