@@ -5,6 +5,10 @@ xorg-server (2:1.13.0-0ubuntu6.1) UNRELEASED; urgency=low
     when acpid is stopped before Xorg is. (LP: #1070481)
   * add 235-composite-tracking.diff to fix exa corruption. (LP: #1010794)
 
+  [ Tim Lunn ]
+  * 500_pointer_barrier_thresholds.diff: Update to fix gaps above
+    barriers at edge of screen (LP: #1073724)
+
  -- Timo Aaltonen <tjaalton@ubuntu.com>  Tue, 09 Oct 2012 10:22:24 +0300
 
 xorg-server (2:1.13.0-0ubuntu6) quantal; urgency=low
